--- a/requirements.txt
+++ b/requirements.txt
@@ -1,102 +1,24 @@
-ansimarkup==1.4.0
-arrow==0.14.2
-attrs==19.1.0
-autopep8==1.4.4
-backcall==0.1.0
 beautifulsoup4==4.8.0
-better-exceptions-fork==0.2.1.post6
-bleach==3.1.0
-cachetools==3.1.1
-certifi==2019.3.9
+certifi==2019.6.16
 chardet==3.0.4
-colorama==0.4.1
-dateparser==0.7.1
-decorator==4.4.0
-defusedxml==0.6.0
-Django==2.2.3
-entrypoints==0.3
+Cython==0.29.13
+Django==2.2.4
 goodreads==0.3.2
-google-api-python-client==1.7.9
-google-auth==1.6.3
-google-auth-httplib2==0.0.3
-google-auth-oauthlib==0.3.0
-httplib2==0.13.0
-humanize==0.5.1
 idna==2.8
 IMAPClient==2.1.0
-ipdb==0.12
-ipykernel==5.1.1
-ipython==7.5.0
-ipython-genutils==0.2.0
-ipywidgets==7.4.2
-jedi==0.13.3
-Jinja2==2.10.1
-jsonschema==3.0.1
-jupyter==1.0.0
-jupyter-client==5.2.4
-jupyter-console==6.0.0
-jupyter-core==4.4.0
-jupyter-server==0.0.5
-jupyterlab-pygments==0.1.0
-loguru==0.2.5
-lxml==4.3.4
-MarkupSafe==1.1.1
-maya==0.6.1
+lxml==4.4.0
 MechanicalSoup==0.11.0
-mistune==0.8.4
-nbconvert==5.5.0
-nbformat==4.4.0
 nose==1.3.7
-notebook==5.7.8
-numpy==1.16.4
-oauth2client==4.1.3
-oauthlib==3.0.1
-pandas==0.24.2
-pandocfilters==1.4.2
-parso==0.4.0
-pendulum==2.0.4
-pexpect==4.7.0
-pickleshare==0.7.5
-plotly==3.10.0
+numpy==1.17.0
 pocket-api==0.1.5
-prometheus-client==0.7.0
-prompt-toolkit==2.0.9
-ptyprocess==0.6.0
 pyamex==0.2.1
-pyarrow==0.13.0
-pyasn1==0.4.5
-pyasn1-modules==0.2.5
-pycodestyle==2.5.0
-Pygments==2.4.2
-pyrsistent==0.15.2
-python-dateutil==2.8.0
-pytz==2019.1
-pytzdata==2019.1
-pyzmq==18.0.1
-qtconsole==4.5.1
+pytz==2019.2
 rauth==0.7.3
-regex==2019.6.8
 requests==2.22.0
-requests-oauthlib==1.2.0
-retrying==1.3.3
-rsa==4.0
-Send2Trash==1.5.0
 six==1.12.0
-snaptime==0.2.4
 soupsieve==1.9.2
 sqlparse==0.3.0
-stravaio==0.0.7
-stravalib==0.10.2
-terminado==0.8.2
-testpath==0.4.2
-tornado==6.0.2
-traitlets==4.3.2
-tzlocal==1.5.1
-units==0.7
-uritemplate==3.0.0
 urllib3==1.25.3
-voila==0.1.7
-wcwidth==0.1.7
-webencodings==0.5.1
-widgetsnbextension==3.4.2
 xmltodict==0.12.0
+python-decouple
+gunicorn
