--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - backend
     volumes:
       - .:/code
+    environment:
+      DJANGO_WEB_HOST: "web"
 
   nginx:
     image: nginx:latest
@@ -17,9 +19,13 @@ services:
       - 8088:80
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./mysite/static:/code/static
+      - ./kaizen/static:/code/static
+    depends_on:
+      - web
     environment:
       DJANGO_WEB_HOST: "web"
+    networks:
+      - backend
 
 networks:
   backend:
