MVP: Production tweaks

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
  listen 80;
- server_name localhost;
+ server_name kaizen-api.howapped.com;
 
  location /static {
      alias /code/static;
