Disable exposing port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,8 +31,8 @@ services:
 
   redis:
     image: redislabs/redismod
-    ports:
-      - 6379:6379
+    # ports:
+    #   - 6379:6379
     volumes:
       - ./data:/code/data
       - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
